--- a/pages CSS/signin.css
+++ b/pages CSS/signin.css
@@ -31,7 +31,7 @@ img:hover{
     transform: scale(1.09);
 }
 
-.signup-wrap {
+.signupW {
     width: 100%;
     max-width: 800px;
 }
@@ -53,20 +53,20 @@ img:hover{
 
 }
 
-.sleft {
+.cont {
     padding: 26px 18px;
     background: linear-gradient(180deg, rgba(255, 255, 255, 0.03), rgba(255, 255, 255, 0.01));
     text-align: center;
 }
 
-.sleft .brand {
+.cont .brand {
     font-size: 2rem;
     font-weight: 800;
     margin-bottom: 6px;
     color: #0b0c22;
     text-shadow: 0 1px 30px #0b0c22;
 }
-.sleft .brand1 {
+.cont .brand1 {
     font-size: 2rem;
     font-weight: 800;
     margin-bottom: 6px;
@@ -74,7 +74,7 @@ img:hover{
     text-shadow: 0 1px 30px #0b0c22;
 }
 
-.sleft .lead {
+.cont .lead {
     color: #c1c5e9;
     opacity: 0.95;
     margin-top: 6px;
@@ -117,7 +117,7 @@ input:hover{
 }
 
 input:focus {
-  background-color: #9699e18d;
+    background-color: #9699e18d;
 }
 
 input::placeholder {
@@ -153,18 +153,19 @@ input::placeholder {
 }
 
 .terms {
-    font-size: 12px;
+    margin-left: 10px;
+    font-size: 13px;
     color: rgb(250, 90, 90);
     margin-top: 12px;
     text-decoration: none;
 }
 
-.signin-link {
+.signin_link {
     margin-top: 13px;
     color: rgba(255, 230, 230, 0.95);
 }
 
-.signin-link a {
+.signin_link a {
     color: #ffd36b;
     text-decoration: none;
     font-weight: 700;
@@ -173,7 +174,6 @@ input::placeholder {
 @media (min-width: 900px) {
 
     .signup-form {
-        /* flex: 1; */
         padding: 40px 40px;
     }
 }
