--- a/pages CSS/signup.css
+++ b/pages CSS/signup.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-size: 1.09rem;
+    font-size: 1.2rem;
 }
 
 html, body {
@@ -101,7 +101,7 @@ label {
     color: #d6b9fc;
     font-size: 0.85rem;
     margin-bottom: 3px;
-    margin-top: 10px;
+    margin-top: 13px;
 }
 
 input {
@@ -155,7 +155,7 @@ input::placeholder {
 }
 
 .terms {
-    font-size: 12px;
+    font-size: 13px;
     color: rgb(250, 90, 90);
     margin-top: 12px;
 }
@@ -174,15 +174,16 @@ input::placeholder {
 @media (min-width: 900px) {
 
     .signup-form {
-        /* flex: 1; */
         padding: 40px 36px;
     }
 }
 
+/* countainer overflow problem */
 @media (max-width: 420px) {
     .row {
         flex-direction: column;
     }
+
     .signup-form {
         padding: 18px;
     }
